@@ -1,3 +1,9 @@
+2010-11-15  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gas/mips/elf-rel28.s, gas/mips/elf-rel28-n32.d,
+	gas/mips/elf-rel28-n64.d: New test.
+	* gas/mips/mips.exp: Run it.
+
 2010-11-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	PR gas/12198
